--- a/filtered_projections_ex1.ipynb
+++ b/filtered_projections_ex1.ipynb
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e0c2b81b10>"
+       "<matplotlib.legend.Legend at 0x1d0d7c50c10>"
       ]
      },
      "execution_count": 4,
@@ -161,7 +161,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e0c63f1e90>"
+       "<matplotlib.legend.Legend at 0x1d0da285b10>"
       ]
      },
      "execution_count": 5,
@@ -349,7 +349,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1e0c6321ad0>"
+       "<matplotlib.image.AxesImage at 0x1d0dc0ca3d0>"
       ]
      },
      "execution_count": 11,
@@ -447,7 +447,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1e0c7420610>"
+       "<matplotlib.image.AxesImage at 0x1d0dc4a7110>"
       ]
      },
      "execution_count": 14,
@@ -545,7 +545,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1e0cbd10850>"
+       "<matplotlib.image.AxesImage at 0x1d0e0dd9c50>"
       ]
      },
      "execution_count": 17,
